--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
+  },
+  "files": ["dist"],
+  "main": "./dist/react-auth.umd.js",
+  "module": "./dist/react-auth.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/react-auth.es.js",
+      "require": "./dist/react-auth.umd.js"
+    }
   }
 }
