--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.8.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -18,7 +20,9 @@
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/react-auth.umd.js",
   "module": "./dist/react-auth.es.js",
   "exports": {
